--- a/scss/rcss_colores_01_completo.scss
+++ b/scss/rcss_colores_01_completo.scss
@@ -933,7 +933,7 @@ body {
     .contenedor {
         .modals{
             .cont_modals {
-                .paso_02a {
+                .modal_error_locales {
                     .cont_modal {
                         .titulo {
                             .cont_titulo {
