--- a/scss/rcss_base.scss
+++ b/scss/rcss_base.scss
@@ -926,7 +926,7 @@ body {
     .contenedor {
         .modals{
             .cont_modals {
-                .paso_02a {
+                .modal_error_locales {
                     .cont_modal {
                         .titulo {
                             .cont_titulo {
