--- a/css/rcss_tipo_01.css
+++ b/css/rcss_tipo_01.css
@@ -685,6 +685,13 @@ body .contenedor .modals .cont_modals .modal_error_locales .cont_modal .cont_inf
 /* MODALS ERROR */
 /* MODALS ERROR */
 /* MODALS CONTACTO */
+body .contenedor .modals .cont_modals .modal_contacto .cont_modal .cont_info .info_modal .cont_final {
+  padding: 5px 20px;
+}
+body .contenedor .modals .cont_modals .modal_contacto .cont_modal .cont_info .info_modal .cont_final .input_contacto .d_input input {
+  width: 100%;
+  height: 20px;
+}
 /* MODALS CONTACTO */
 /* MODALS PAGINA INICIO */
 body .contenedor .modals .cont_modals .modal_pagina_inicio .cont_modal .cont_info_inicio .inicio_titulo {
