--- a/scss/rcss_base.scss
+++ b/scss/rcss_base.scss
@@ -1044,11 +1044,11 @@ body {
                                     .input_contacto {
                                         h1{}
                                         .d_input {
-                                            input{ width: 100%; height: 20px }
+                                            input{}
                                         }
                                     }
                                     .input_enviar {
-                                        input{ width: 100%; height: 70px }
+                                        input{}
                                     }
                                 }
                             }
