--- a/scss/rcss_tipo_01.scss
+++ b/scss/rcss_tipo_01.scss
@@ -1137,10 +1137,11 @@ body {
                         .cont_info {
                             .info_modal {
                                 .cont_final {
+                                    padding: 5px 20px;
                                     .input_contacto {
                                         h1{}
                                         .d_input {
-                                            input{}
+                                            input{ width: 100%; height: 20px }
                                         }
                                     }
                                     .input_enviar {
