--- a/css/rcss_tipo_01.css
+++ b/css/rcss_tipo_01.css
@@ -690,7 +690,11 @@ body .contenedor .modals .cont_modals .modal_contacto .cont_modal .cont_info .in
 }
 body .contenedor .modals .cont_modals .modal_contacto .cont_modal .cont_info .info_modal .cont_final .input_contacto .d_input input {
   width: 100%;
-  height: 20px;
+  height: 30px;
+}
+body .contenedor .modals .cont_modals .modal_contacto .cont_modal .cont_info .info_modal .cont_final .input_contacto .d_input textarea {
+  width: 100%;
+  height: 70px;
 }
 /* MODALS CONTACTO */
 /* MODALS PAGINA INICIO */
