--- a/scss/rcss_tipo_01.scss
+++ b/scss/rcss_tipo_01.scss
@@ -1141,7 +1141,8 @@ body {
                                     .input_contacto {
                                         h1{}
                                         .d_input {
-                                            input{ width: 100%; height: 20px }
+                                            input{ width: 100%; height: 30px }
+                                            textarea{ width: 100%; height: 70px; }
                                         }
                                     }
                                     .input_enviar {
