--- a/scss/rcss_base.scss
+++ b/scss/rcss_base.scss
@@ -1045,6 +1045,7 @@ body {
                                         h1{}
                                         .d_input {
                                             input{}
+                                            textarea{}
                                         }
                                     }
                                     .input_enviar {
