--- a/scss/rcss_colores_01_basico.scss
+++ b/scss/rcss_colores_01_basico.scss
@@ -965,6 +965,7 @@ body {
                                         h1{}
                                         .d_input {
                                             input{}
+                                            textarea{}
                                         }
                                     }
                                     .input_enviar {
