--- a/scss/rcss_colores_01_completo.scss
+++ b/scss/rcss_colores_01_completo.scss
@@ -1049,6 +1049,7 @@ body {
                                         h1{}
                                         .d_input {
                                             input{}
+                                            textarea{}
                                         }
                                     }
                                     .input_enviar {
