--- a/scss/rcss_fontsize_01.scss
+++ b/scss/rcss_fontsize_01.scss
@@ -934,6 +934,7 @@ body {
                                         h1{ font-size: $contacto_nombre }
                                         .d_input {
                                             input{}
+                                            textarea{}
                                         }
                                     }
                                     .input_enviar {
