--- a/scss/rcss_tipo_01.scss
+++ b/scss/rcss_tipo_01.scss
@@ -1146,7 +1146,7 @@ body {
                                         }
                                     }
                                     .input_enviar {
-                                        input{}
+                                        input{ padding: 5px 15px }
                                     }
                                 }
                             }
