--- a/scss/rcss_fontsize_01.scss
+++ b/scss/rcss_fontsize_01.scss
@@ -914,7 +914,7 @@ body {
 
 /* MODALS CONTACTO */
 $contacto_nombre: 18px;
-$contacto_nombre: 12px;
+$contacto_btn: 12px;
 body {
     .contenedor {
         .modals{
