--- a/scss/rcss_tipo_01.scss
+++ b/scss/rcss_tipo_01.scss
@@ -1146,6 +1146,7 @@ body {
                                         }
                                     }
                                     .input_enviar {
+                                        padding-top: 10px;
                                         input{ padding: 5px 15px }
                                     }
                                 }
