--- a/css/rcss_colores_04_basico.css
+++ b/css/rcss_colores_04_basico.css
@@ -18,7 +18,7 @@ body .contenedor {
   color: #000;
 }
 body .contenedor .pagina .cont_pagina .header {
-  background: #000;
+  background: #7fa998;
   border-bottom-color: #941C80;
 }
 body .contenedor .pagina .cont_pagina .header .menu_right .shop {
