--- a/scss/rcss_colores_04_basico.scss
+++ b/scss/rcss_colores_04_basico.scss
@@ -29,7 +29,7 @@ body{
 
 
 /* PAGINA PRINCIPAL HEADER-CATEGORIAS-FOOTER */
-$header_background: #000;
+$header_background: #7fa998;
 $contenido_background: #e8e8e8;
 body {
     .contenedor {
