--- a/css/rcss_colores_04_basico.css
+++ b/css/rcss_colores_04_basico.css
@@ -1,9 +1,9 @@
 body .contenedor .menu_left {
-  border-right: 1px solid #941C80;
+  border-right: 1px solid #df8543;
   background: #fff;
 }
 body .contenedor .menu_left .cont_menu_left .btn_toogle {
-  color: #941C80;
+  color: #df8543;
 }
 body .contenedor .menu_left .cont_menu_left .menu_info h1 {
   color: #000;
@@ -19,10 +19,10 @@ body .contenedor {
 }
 body .contenedor .pagina .cont_pagina .header {
   background: #7fa998;
-  border-bottom-color: #941C80;
+  border-bottom-color: #df8543;
 }
 body .contenedor .pagina .cont_pagina .header .menu_right .shop {
-  color: #941C80;
+  color: #df8543;
 }
 body .contenedor .pagina .cont_pagina .header .menu_right .cantcart {
   background: #F9DDF3;
@@ -47,7 +47,7 @@ body .contenedor .modals .cont_modals .modal {
 }
 body .contenedor .modals .cont_modals .modal .cont_modal .titulo {
   background: #f5f5f5;
-  border-bottom-color: #941C80;
+  border-bottom-color: #df8543;
 }
 body .contenedor .modals .cont_modals .modal .cont_modal .close {
   color: #999;
@@ -56,7 +56,7 @@ body .contenedor .modals .cont_modals .modal .cont_modal .sub_total {
   background: #ddd;
 }
 body .contenedor .modals .cont_modals .modal .cont_modal .acciones {
-  border-top-color: #941C80;
+  border-top-color: #df8543;
   background: #f5f5f5;
 }
 /* MODALS BASE */
