--- a/scss/rcss_colores_04_basico.scss
+++ b/scss/rcss_colores_04_basico.scss
@@ -1,6 +1,6 @@
 $text_color: #000;
 
-$color_base_01: #941C80;
+$color_base_01: #df8543;
 $color_base_02: #941C80;
 $color_base_03: #F9DDF3;
 $menu_background: #fff;
