--- a/scss/rcss_colores_02_basico.scss
+++ b/scss/rcss_colores_02_basico.scss
@@ -28,7 +28,7 @@ body{
 
 
 /* PAGINA PRINCIPAL HEADER-CATEGORIAS-FOOTER */
-$header_background: #fff;
+$header_background: #ebf0f7;
 $contenido_background: #e8e8e8;
 body {
     .contenedor {
