--- a/scss/rcss_colores_02_basico.scss
+++ b/scss/rcss_colores_02_basico.scss
@@ -28,8 +28,8 @@ body{
 
 
 /* PAGINA PRINCIPAL HEADER-CATEGORIAS-FOOTER */
-$header_background: #ebf0f7;
-$contenido_background: #e8e8e8;
+$header_background: #fff;
+$contenido_background: #ebf0f6;
 body {
     .contenedor {
         color: $text_color;
