--- a/css/rcss_colores_02_basico.css
+++ b/css/rcss_colores_02_basico.css
@@ -1,16 +1,16 @@
 body .contenedor .menu_left {
-  border-right: 1px solid #941C80;
+  border-right: 1px solid #132238;
   background: #fff;
 }
 body .contenedor .menu_left .cont_menu_left .btn_toogle {
-  color: #941C80;
+  color: #132238;
 }
 body .contenedor .menu_left .cont_menu_left .menu_info h1 {
   color: #000;
 }
 body .contenedor .menu_left .cont_menu_left .menu_info .lista_paginas a {
   color: #000;
-  border-bottom-color: #941C80;
+  border-bottom-color: #132238;
 }
 
 /* PAGINA PRINCIPAL HEADER-CATEGORIAS-FOOTER */
@@ -19,13 +19,13 @@ body .contenedor {
 }
 body .contenedor .pagina .cont_pagina .header {
   background: #fff;
-  border-bottom-color: #941C80;
+  border-bottom-color: #132238;
 }
 body .contenedor .pagina .cont_pagina .header .menu_right .shop {
-  color: #941C80;
+  color: #132238;
 }
 body .contenedor .pagina .cont_pagina .header .menu_right .cantcart {
-  background: #F9DDF3;
+  background: #ebf0f6;
 }
 body .contenedor .pagina .cont_pagina .contenido {
   background: #ebf0f6;
@@ -47,7 +47,7 @@ body .contenedor .modals .cont_modals .modal {
 }
 body .contenedor .modals .cont_modals .modal .cont_modal .titulo {
   background: #f5f5f5;
-  border-bottom-color: #941C80;
+  border-bottom-color: #132238;
 }
 body .contenedor .modals .cont_modals .modal .cont_modal .close {
   color: #999;
@@ -56,7 +56,7 @@ body .contenedor .modals .cont_modals .modal .cont_modal .sub_total {
   background: #ddd;
 }
 body .contenedor .modals .cont_modals .modal .cont_modal .acciones {
-  border-top-color: #941C80;
+  border-top-color: #132238;
   background: #f5f5f5;
 }
 /* MODALS BASE */
