--- a/scss/rcss_colores_02_basico.scss
+++ b/scss/rcss_colores_02_basico.scss
@@ -1,6 +1,6 @@
-$color_base_01: #941C80;
-$color_base_02: #941C80;
-$color_base_03: #F9DDF3;
+$color_base_01: #132238;
+$color_base_02: #132238;
+$color_base_03: #ebf0f6;
 $menu_background: #fff;
 
 $titulo_color: #000;
