--- a/scss/rcss_colores_03_basico.scss
+++ b/scss/rcss_colores_03_basico.scss
@@ -1,8 +1,8 @@
 $text_color: #000;
 
-$color_base_01: #941C80;
-$color_base_02: #941C80;
-$color_base_03: #F9DDF3;
+$color_base_01: #b1ad25;
+$color_base_02: #b1ad25;
+$color_base_03: #f0eeb1;
 $menu_background: #fff;
 
 $titulo_color: #000;
@@ -29,8 +29,8 @@ body{
 
 
 /* PAGINA PRINCIPAL HEADER-CATEGORIAS-FOOTER */
-$header_background: #000;
-$contenido_background: #e8e8e8;
+$header_background: #fff;
+$contenido_background: #fdfce0;
 body {
     .contenedor {
         color: $text_color;
