--- a/css/rcss_colores_03_basico.css
+++ b/css/rcss_colores_03_basico.css
@@ -1,16 +1,16 @@
 body .contenedor .menu_left {
-  border-right: 1px solid #941C80;
+  border-right: 1px solid #b1ad25;
   background: #fff;
 }
 body .contenedor .menu_left .cont_menu_left .btn_toogle {
-  color: #941C80;
+  color: #b1ad25;
 }
 body .contenedor .menu_left .cont_menu_left .menu_info h1 {
   color: #000;
 }
 body .contenedor .menu_left .cont_menu_left .menu_info .lista_paginas a {
   color: #000;
-  border-bottom-color: #941C80;
+  border-bottom-color: #b1ad25;
 }
 
 /* PAGINA PRINCIPAL HEADER-CATEGORIAS-FOOTER */
@@ -18,17 +18,17 @@ body .contenedor {
   color: #000;
 }
 body .contenedor .pagina .cont_pagina .header {
-  background: #000;
-  border-bottom-color: #941C80;
+  background: #fff;
+  border-bottom-color: #b1ad25;
 }
 body .contenedor .pagina .cont_pagina .header .menu_right .shop {
-  color: #941C80;
+  color: #b1ad25;
 }
 body .contenedor .pagina .cont_pagina .header .menu_right .cantcart {
-  background: #F9DDF3;
+  background: #f0eeb1;
 }
 body .contenedor .pagina .cont_pagina .contenido {
-  background: #e8e8e8;
+  background: #fdfce0;
 }
 body .contenedor .pagina .cont_pagina .contenido .cont_contenido .botones_principales .cont_bp .cont_bpi .nombre {
   color: #000;
@@ -47,7 +47,7 @@ body .contenedor .modals .cont_modals .modal {
 }
 body .contenedor .modals .cont_modals .modal .cont_modal .titulo {
   background: #f5f5f5;
-  border-bottom-color: #941C80;
+  border-bottom-color: #b1ad25;
 }
 body .contenedor .modals .cont_modals .modal .cont_modal .close {
   color: #999;
@@ -56,7 +56,7 @@ body .contenedor .modals .cont_modals .modal .cont_modal .sub_total {
   background: #ddd;
 }
 body .contenedor .modals .cont_modals .modal .cont_modal .acciones {
-  border-top-color: #941C80;
+  border-top-color: #b1ad25;
   background: #f5f5f5;
 }
 /* MODALS BASE */
