--- a/scss/rcss_colores_04_basico.scss
+++ b/scss/rcss_colores_04_basico.scss
@@ -1,8 +1,8 @@
 $text_color: #000;
 
-$color_base_01: #df8543;
-$color_base_02: #941C80;
-$color_base_03: #F9DDF3;
+$color_base_01: #971549;
+$color_base_02: #971549;
+$color_base_03: #cf455c;
 $menu_background: #fff;
 
 $titulo_color: #000;
@@ -29,8 +29,8 @@ body{
 
 
 /* PAGINA PRINCIPAL HEADER-CATEGORIAS-FOOTER */
-$header_background: #7fa998;
-$contenido_background: #e8e8e8;
+$header_background: #fff;
+$contenido_background: #ff9898;
 body {
     .contenedor {
         color: $text_color;
