--- a/css/rcss_colores_04_basico.css
+++ b/css/rcss_colores_04_basico.css
@@ -25,10 +25,10 @@ body .contenedor .pagina .cont_pagina .header .menu_right .shop {
   color: #971549;
 }
 body .contenedor .pagina .cont_pagina .header .menu_right .cantcart {
-  background: #cf455c;
+  background: #FFDFDF;
 }
 body .contenedor .pagina .cont_pagina .contenido {
-  background: #ff9898;
+  background: #FFDFDF;
 }
 body .contenedor .pagina .cont_pagina .contenido .cont_contenido .botones_principales .cont_bp .cont_bpi .nombre {
   color: #000;
