--- a/scss/rcss_colores_04_basico.scss
+++ b/scss/rcss_colores_04_basico.scss
@@ -2,7 +2,7 @@ $text_color: #000;
 
 $color_base_01: #971549;
 $color_base_02: #971549;
-$color_base_03: #cf455c;
+$color_base_03: #FFDFDF;
 $menu_background: #fff;
 
 $titulo_color: #000;
@@ -30,7 +30,7 @@ body{
 
 /* PAGINA PRINCIPAL HEADER-CATEGORIAS-FOOTER */
 $header_background: #fff;
-$contenido_background: #ff9898;
+$contenido_background: #FFDFDF;
 body {
     .contenedor {
         color: $text_color;
