--- a/scss/rcss_colores_05_basico.scss
+++ b/scss/rcss_colores_05_basico.scss
@@ -1,8 +1,8 @@
 $text_color: #000;
 
-$color_base_01: #3282b8;
-$color_base_02: #941C80;
-$color_base_03: #F9DDF3;
+$color_base_01: #be9fe1;
+$color_base_02: #be9fe1;
+$color_base_03: #f1f1f6;
 $menu_background: #fff;
 
 $titulo_color: #000;
@@ -29,8 +29,8 @@ body{
 
 
 /* PAGINA PRINCIPAL HEADER-CATEGORIAS-FOOTER */
-$header_background: #1b262c;
-$contenido_background: #e8e8e8;
+$header_background: #fff;
+$contenido_background: #f1f1f6;
 body {
     .contenedor {
         color: $text_color;
