--- a/css/rcss_colores_09_basico.css
+++ b/css/rcss_colores_09_basico.css
@@ -18,7 +18,7 @@ body .contenedor {
   color: #000;
 }
 body .contenedor .pagina .cont_pagina .header {
-  background: #1b262c;
+  background: #fff;
   border-bottom-color: #3282b8;
 }
 body .contenedor .pagina .cont_pagina .header .menu_right .shop {
