--- a/scss/rcss_colores_09_basico.scss
+++ b/scss/rcss_colores_09_basico.scss
@@ -29,7 +29,7 @@ body{
 
 
 /* PAGINA PRINCIPAL HEADER-CATEGORIAS-FOOTER */
-$header_background: #1b262c;
+$header_background: #fff;
 $contenido_background: #e8e8e8;
 body {
     .contenedor {
