--- a/scss/rcss_colores_06_basico.scss
+++ b/scss/rcss_colores_06_basico.scss
@@ -1,7 +1,7 @@
 $text_color: #000;
 
-$color_base_01: #a7b99e;
-$color_base_02: #a7b99e;
+$color_base_01: #535a3b;
+$color_base_02: #535a3b;
 $color_base_03: #cedcc3;
 $menu_background: #fff;
 
