--- a/css/rcss_colores_06_basico.css
+++ b/css/rcss_colores_06_basico.css
@@ -1,16 +1,16 @@
 body .contenedor .menu_left {
-  border-right: 1px solid #a7b99e;
+  border-right: 1px solid #535a3b;
   background: #fff;
 }
 body .contenedor .menu_left .cont_menu_left .btn_toogle {
-  color: #a7b99e;
+  color: #535a3b;
 }
 body .contenedor .menu_left .cont_menu_left .menu_info h1 {
   color: #000;
 }
 body .contenedor .menu_left .cont_menu_left .menu_info .lista_paginas a {
   color: #000;
-  border-bottom-color: #a7b99e;
+  border-bottom-color: #535a3b;
 }
 
 /* PAGINA PRINCIPAL HEADER-CATEGORIAS-FOOTER */
@@ -19,10 +19,10 @@ body .contenedor {
 }
 body .contenedor .pagina .cont_pagina .header {
   background: #fff;
-  border-bottom-color: #a7b99e;
+  border-bottom-color: #535a3b;
 }
 body .contenedor .pagina .cont_pagina .header .menu_right .shop {
-  color: #a7b99e;
+  color: #535a3b;
 }
 body .contenedor .pagina .cont_pagina .header .menu_right .cantcart {
   background: #cedcc3;
@@ -47,7 +47,7 @@ body .contenedor .modals .cont_modals .modal {
 }
 body .contenedor .modals .cont_modals .modal .cont_modal .titulo {
   background: #f5f5f5;
-  border-bottom-color: #a7b99e;
+  border-bottom-color: #535a3b;
 }
 body .contenedor .modals .cont_modals .modal .cont_modal .close {
   color: #999;
@@ -56,7 +56,7 @@ body .contenedor .modals .cont_modals .modal .cont_modal .sub_total {
   background: #ddd;
 }
 body .contenedor .modals .cont_modals .modal .cont_modal .acciones {
-  border-top-color: #a7b99e;
+  border-top-color: #535a3b;
   background: #f5f5f5;
 }
 /* MODALS BASE */
