--- a/css/rcss_colores_07_basico.css
+++ b/css/rcss_colores_07_basico.css
@@ -25,7 +25,7 @@ body .contenedor .pagina .cont_pagina .header .menu_right .shop {
   color: #1fab89;
 }
 body .contenedor .pagina .cont_pagina .header .menu_right .cantcart {
-  background: #9df3c4;
+  background: #d7fbe8;
 }
 body .contenedor .pagina .cont_pagina .contenido {
   background: #d7fbe8;
