--- a/scss/rcss_colores_07_basico.scss
+++ b/scss/rcss_colores_07_basico.scss
@@ -2,7 +2,7 @@ $text_color: #000;
 
 $color_base_01: #1fab89;
 $color_base_02: #1fab89;
-$color_base_03: #9df3c4;
+$color_base_03: #d7fbe8;
 $menu_background: #fff;
 
 $titulo_color: #000;
