--- a/scss/rcss_colores_10_basico.scss
+++ b/scss/rcss_colores_10_basico.scss
@@ -1,8 +1,8 @@
 $text_color: #000;
 
-$color_base_01: #3282b8;
-$color_base_02: #941C80;
-$color_base_03: #F9DDF3;
+$color_base_01: #625757;
+$color_base_02: #625757;
+$color_base_03: #f9f9f9;
 $menu_background: #fff;
 
 $titulo_color: #000;
@@ -30,7 +30,7 @@ body{
 
 /* PAGINA PRINCIPAL HEADER-CATEGORIAS-FOOTER */
 $header_background: #fff;
-$contenido_background: #e8e8e8;
+$contenido_background: #f9f9f9;
 body {
     .contenedor {
         color: $text_color;
